--- a/pom.xml
+++ b/pom.xml
@@ -1,32 +1,55 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-      <parent>
-    <groupId>org.sonatype.oss</groupId>
-    <artifactId>oss-parent</artifactId>
-    <version>7</version>
-  </parent>
+    <parent>
+        <groupId>org.sonatype.oss</groupId>
+        <artifactId>oss-parent</artifactId>
+        <version>7</version>
+    </parent>
 
     <groupId>pl.ais.commons</groupId>
     <artifactId>ais-commons-query</artifactId>
     <version>1.0.1-SNAPSHOT</version>
+    <packaging>jar</packaging>
+    <name></name>
+    <description></description>
+    <url>https://github.com/aispl/ais-commons-query</url>
+
+    <licenses>
+        <license>
+            <name>The Apache Software License, Version 2.0</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+        </license>
+    </licenses>
+
     <scm>
         <connection>scm:git:git@github.com:aispl/ais-commons-query.git</connection>
-        <url>scm:git:git@github.com:aispl/ais-commons-query.git</url>
         <developerConnection>scm:git:git@github.com:aispl/ais-commons-query.git</developerConnection>
+        <url>git@github.com:aispl/ais-commons-query.git</url>
     </scm>
 
+    <developers>
+        <developer>
+            <id>vardlokkur</id>
+            <name>Michal Jastak</name>
+            <roles>
+                <role>Architect</role>
+            </roles>
+        </developer>
+    </developers>
+
     <build>
-      <plugins>
-        <plugin>
-          <artifactId>maven-compiler-plugin</artifactId>
-          <version>2.5.1</version>
-          <configuration>
-            <source>1.6</source>
-          </configuration>
-        </plugin>
-      </plugins>
+        <plugins>
+            <plugin>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.5.1</version>
+                <configuration>
+                    <source>1.6</source>
+                </configuration>
+            </plugin>
+        </plugins>
     </build>
 
     <dependencies>
