--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,8 @@
     <artifactId>ais-commons-query</artifactId>
     <version>1.0.1-SNAPSHOT</version>
     <packaging>jar</packaging>
-    <name></name>
-    <description></description>
+    <name>AIS.PL Commons - Query</name>
+    <description>This library provides set of components usable for building queries, executing them and processing results.</description>
     <url>https://github.com/aispl/ais-commons-query</url>
 
     <licenses>
