--- a/pom.xml
+++ b/pom.xml
@@ -9,7 +9,7 @@
 
     <groupId>pl.ais.commons</groupId>
     <artifactId>ais-commons-query</artifactId>
-    <version>1.0.2</version>
+    <version>1.0.3-SNAPSHOT</version>
     <packaging>jar</packaging>
     <name>AIS.PL Commons - Query</name>
     <description>This library provides set of components usable for building queries, executing them and processing results.</description>
