--- a/pom.xml
+++ b/pom.xml
@@ -40,7 +40,7 @@
     </developers>
 
     <properties>
-        <querydsl.version>3.3.2</querydsl.version>
+        <querydsl.version>3.3.3</querydsl.version>
         <spring.version>4.0.4.RELEASE</spring.version>
     </properties>
 
@@ -114,7 +114,7 @@
         </dependency>
         <dependency>
             <groupId>junit</groupId>
-            <artifactId>junit-dep</artifactId>
+            <artifactId>junit</artifactId>
             <version>4.11</version>
             <scope>test</scope>
             <exclusions>
