--- a/pom.xml
+++ b/pom.xml
@@ -40,8 +40,8 @@
     </developers>
 
     <properties>
-        <querydsl.version>3.3.3</querydsl.version>
-        <spring.version>4.0.4.RELEASE</spring.version>
+        <querydsl.version>3.4.2</querydsl.version>
+        <spring.version>4.0.6.RELEASE</spring.version>
     </properties>
 
     <build>
@@ -111,6 +111,12 @@
             <groupId>com.mysema.querydsl</groupId>
             <artifactId>querydsl-collections</artifactId>
             <version>${querydsl.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>cglib</groupId>
+            <artifactId>cglib</artifactId>
+            <version>2.2</version>
+            <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
