--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-jxr-plugin</artifactId>
-                <version>2.3</version>
+                <version>2.5</version>
                 <executions>
                     <execution>
                         <phase>verify</phase>
@@ -71,14 +71,14 @@
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-pmd-plugin</artifactId>
-                <version>3.0.1</version>
+                <version>3.5</version>
                 <configuration>
-                    <includeTests>true</includeTests>
+                    <includeTests>false</includeTests>
                     <rulesets>
                         <ruleset>${basedir}/pmd-ruleset.xml</ruleset>
                     </rulesets>
                     <sourceEncoding>ISO-8859-1</sourceEncoding>
-                    <targetJdk>1.7</targetJdk>
+                    <targetJdk>1.8</targetJdk>
                 </configuration>
                 <executions>
                     <execution>
