--- a/pom.xml
+++ b/pom.xml
@@ -40,9 +40,9 @@
     </developers>
 
     <properties>
-        <cglib.version>2.2.2</cglib.version>
-        <querydsl.version>4.0.5</querydsl.version>
-        <spring.version>4.2.1.RELEASE</spring.version>
+        <cglib.version>3.2.5</cglib.version>
+        <querydsl.version>4.1.4</querydsl.version>
+        <spring.version>4.3.12.RELEASE</spring.version>
     </properties>
 
     <build>
@@ -96,7 +96,7 @@
         <dependency>
             <groupId>com.google.code.findbugs</groupId>
             <artifactId>jsr305</artifactId>
-            <version>3.0.0</version>
+            <version>3.0.2</version>
             <optional>true</optional>
         </dependency>
         <dependency>
@@ -131,14 +131,14 @@
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
-            <artifactId>mockito-all</artifactId>
-            <version>1.10.19</version>
+            <artifactId>mockito-core</artifactId>
+            <version>2.10.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.assertj</groupId>
             <artifactId>assertj-core</artifactId>
-            <version>3.1.0</version>
+            <version>3.8.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
